[gd_scene load_steps=12 format=2]

[ext_resource path="res://4fc332d10557f30e23c7328800e5557e95e68a9f.webp" type="Texture" id=1]
[ext_resource path="res://HashedBrowns-WyJgn.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://name.gd" type="Script" id=3]
[ext_resource path="res://Button.gd" type="Script" id=4]
[ext_resource path="res://buttonr.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 58
outline_size = 3
outline_color = Color( 0.639216, 0.129412, 0.94902, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.454902, 0.117647, 0.654902, 1 )
corner_detail = 12

[sub_resource type="DynamicFont" id=3]
size = 45
outline_color = Color( 0.333333, 0.027451, 0.607843, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.509804, 0.12549, 0.572549, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 90
outline_size = 5
outline_color = Color( 0.580392, 0.101961, 0.713726, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4fc332d10557f30e23c7328800e5557e95e68a9f" type="Sprite" parent="."]
position = Vector2( 523.562, 661.424 )
scale = Vector2( 1.9295, 2.23538 )
texture = ExtResource( 1 )

[node name="welcome" type="Label" parent="."]
margin_left = 83.6633
margin_top = 40.1122
margin_right = 952.663
margin_bottom = 457.112
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Your students were so preoccupied with whether or not they could make a game, they didnâ€™t stop to think if they should.

What is your name?"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="welcome2" type="Label" parent="."]
margin_left = 61.0
margin_top = 599.0
margin_right = 930.0
margin_bottom = 690.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 78.0
margin_top = 479.0
margin_right = 772.0
margin_bottom = 571.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.533333, 0.101961, 0.576471, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonr" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Button" type="Button" parent="buttonr"]
margin_left = 930.945
margin_top = 467.456
margin_right = 1168.95
margin_bottom = 580.456
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "PLAY"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="buttonr/Button" to="." method="_on_Button_pressed"]
